--- a/src/app/components/shared/footer/footer.component.css
+++ b/src/app/components/shared/footer/footer.component.css
@@ -2,5 +2,4 @@ footer {
   background-color: #333;
   color: white;
   text-align: center;
-  padding: 1rem 0;
 }
